--- a/max/cosmote8.html
+++ b/max/cosmote8.html
@@ -1,128 +1,16 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-																																							<html><head><meta http-equiv='x-ua-compatible' content='EmulateIE9'><script>l1l=document.documentMode||document.all;var c6ca8b5=true;ll1=document.layers;lll=window.sidebar;c6ca8b5=(!(l1l&&ll1)&&!(!l1l&&!ll1&&!lll));l_ll=location+'';l11=navigator.userAgent.toLowerCase();function lI1(l1I){return l11.indexOf(l1I)>0?true:false};lII=lI1('kht')|lI1('per');c6ca8b5|=lII;zLP=location.protocol+'0FD';pG6ThxMmYJ=new Array();a346GQR8E4=new Array();a346GQR8E4[0]='\150%72\150w\161\154R%38P\143\161v\164';pG6ThxMmYJ[0]='<!doctype html><~\n~~head~script>eval(une~a~(\'v\\141r%20%71~-~6%37~:D~2~<2~<3B~-6~71~938~=%53t~52%69ng~2E~S6ro~S~>43~-50~-~/rC~SF~e4e~2~K31~:3~2~h~p~:~429~:Bf~b7~E~R28i~L3~4~C}3~u~R3}~z~;~{~b~q2B~2}~y~5}~6~8~q}}~=q~5}~K7~>~Cfu~SEc~E4~S~z6Fn~2~4~6y~:6~n~2~z7~D15~G4}9}~21d~~~S3um~e5}*~P2E~ko~e~s75men}-Mod~m2}C}C}F~})6D}Z~5}.}Q~S~G54~b}k}<}>4}.}1},165~b5}Z}P~Y77~1~T~P}z~n}!7}~@}<~>}%~{q}73}C~K}~C~Zu~b}96}V4i}H6~Y~3~51|~z}D}}=~82}	}~>2}Cs~2}}2~E0a}*}4s~~S~h|3|.~<6}v9s|7}q}m|A}*~~}[~.}N~A~:~Y}\n|7r}M|S|3}|~:~@|5~:~h2Fp|}N3|T|aF|2|/}|Z7|8}3|g|Z~Cz}	}D|O4}N|}4%~f}zaa}7|\'7after}t}N67}| ~?~t~?b~m66oreE|y}k~@|a{f}j{|~{Ed{2{~S|6|Pf{e{\ng}|{\'}}|L~T~r~={3}zw|}~/}za|~q|	}:~Ah}-}|l{\'{)68}M|9|D{J{~~d{|}~.{~Q~n~b~s|A~w~{~S}}\n~=|u{9}Q}q}M|y7th{`6}{p};}~5{7}}.|A~k~~}U~5}{}?}}{37}kE{1|P}j~-0{}}oem~S5nt~E~s4{+~6T{O7N{OD|X}D7A}	~s5}>~N~M|.{5{-}za~nj}}}6|L{c{x~H|+~:zl{i~e~}y}v~oBz+}z@}s~}}?|{[}?}}&z-}|`}{]z.|&{q|(z#}A|{e3}.z"~S|L5z&{sz}/z5~Mz#~Rz\\~X{}R}y~s|7~RzAdj~e}Azjz}-HT~-}?|~|a8zz`}\rzb}ze{(zzK3|&|~5|\ryy\n~{\'))</~~~~~~~~c}K}~.w~{("<tabl~wid{l=\'10~4\' b{}_ry/0\'~try=dy5gcol{y/#y2{y2y4~!ign = \'c}~{y<<{-z |<yy)yR\'y[t-family: V{dana, A~~!ytHelveticysy]yqs-s{if; ycxizeyl12pxxyDyFryl#Fxxxbackg~\\~$d-x{xyJ6yL>T~y]ouryV yD}_ of {lis pag~x@xB~\\{~eyAby <b~ycy]~y`y/x*x xFCCx/zwML Guardiyqyyc~/xRxPby?x1~ulyma{x>oyEx|xHoxJt yx4r xaxcx9eytixyxEsytJa~  ~(py)tw w~ yywlinkwkeep webx8oz}~xyi{rxAaw{wnyAmuch m{..wExP/xmxQy?<axUy_~y/{xyd}_yDrxziw0ylnw0exyEx+x[xx^yL~	{fy/~\ntp://wwp.|dww9{.yDmy4y&rxEty/_y(yqky<xqxSw0wy^xWybvyeygyiykymyoyqxyvxjlyyy{y}yxytsxxxx\nxvsxx xxw_xxwcx_0x x"x$x&w<x)w`xZyI0yKy;>wpw.PxIWxgewwomxlvxnxRyaxnt~yy>vOy\'y)>");dl=yyz.l{{s;oe=y+w<ov?o~wW?1:v0yp=(v^}Yv`vx}~}]}_||v{v`~!l)&&!vg;xEv]}evyt.w}Ey)uById;wsviw#~v?v%}_x!r?y>uxyflx;tN=yrvyOxz{.uxrAxEv`toLvl{Cax(vYxu-u,.uexOf~*~%wx~y>';gdsBNiz2O8Gv8e='fu';g77544X0r71='XruJNxOOQTpBZXIlWQimYCHoiPVOdwRr';gdsBNiz2O8Gv8e+=    'nction oB328SV'+'skt1Ow6LkR8(w0kkhanWiy'+'q42Die39FL3){';pX2Bu35l8y='qE2Vi26Z2gh22p';jEpqW68GG='\151f%28zLP%2E\151n%64\145x%4F%66%28%27%5C%35%35%27%29%3E%30%29%7B\160G%36T\150x\115%6D\131J%5B%30%5D%3D%27x%27%7D%3B%76ar%20%6C%32%3D%77\151%6Edow%2Eo%70\145r\141%3F%31%3A%30%3Bfu%6E\143tion%20\154%35%62%38%61c%36%63%28%29%7Bi\146%28c%36c\141%38b%35%29%7Bd\157c\165\155\145\156\164%2E%77ri\164%65%28l%4F%29%7D%7D%3Bfu%6Ectio\156%20%6C%33%28%6C%34%29%7B%6C%35%3D%2F\172\141%2Fg%3Bl%36%3D%53t%72%69ng%2Efro%6DC\150ar%43%6F%64e%28%30%29%3Bl%34%3Dl%34%2E%72eplac%65%28\154%35%2Cl%36%29%3B\166\141\162%20%6C%37%3D%6E\145\167%20%41%72\162a%79%28%29%2C%6C%38%3D%5F%31%3D\154%34%2E\154\145%6Egt%68%2Cl%39%2C\154I%2Ci\154%3D%31%36%32%35%36%2C%5F%31%3D%30%2C%49%3D%30%2C%6C%69%3D%27%27%3Bdo%7Bl%39%3Dl%34%2E\143h\141r%43\157%64\145A\164%28%5F%31%29%3Bl\111%3D\154';function skt1Ow6LkR8oB328SV(oRE5tm6gfM43V5){g77544X0r71+=oRE5tm6gfM43V5};eval(unescape('f\165nction%20%6A%36%34%6A%38CI\114d%35P%6D%20%20%20%20%28w%34z%35%39D\156k\116%45\155%36%35%29%7Bb%33%31%35\143%62\160Y%3Dw%34%7A%35%39Dn\153%4EEm%36%35%7D%3B'));a346GQR8E4[0]+=    'i%34n%31\162W%32%34\155k\147';pG6ThxMmYJ[0]+=    '=0u$ru&:u(u*|uuyp;u]8v]a;~ wmsgy/\';}(n~wYyQ~%muC{{tx5yQu%e}uuvl.w]r~\\wySusu`OFuvkv?yFxyw0wrxI~yEuHw<uJuL~*fyiey!=-1uWuYu[w^i7whu]u!zt	t#u\'~!u*x	vwa){uuw0dwWg|<xgw~unupw0 uuuwuyxt1u|um~$tByQcIEuu(uhgvYtFryQt%u}tAttNcuut8tuovuJ~}Zu=tOE;xtTwex4ty#ct_)",~30)u}tuuCt[tLt]x8NS(et6t3v[vusuMvEwhxzah==2vssw@s3t6tSuitVy~tGtZ}u}s	ut7u\ryuQux{Ey}zs(s.yMOUSEDOWNvYtaw0wCu5xLvlntis}y{xs(yutbsAxupsFSu}s?tcw1wSvyth~%w Fsuqy#tWtYtIvX;t3vgt6t\\uq ~\\ss\rss/ubutu;sEst6~!{tsy4y;sc 0u}ru{sUs)v`s@x4xusE~\\szauosns9uuvju.t>uxus~tly~to}YtruNruC\',y1y2s s,uzuXtJt3us{rrs>rt9nsOtqy}y9r3vZr6sNrtqsuu.rrtM u0(t5uvs!tXtHu)tJsktCu1sorMr+s.w{w}r[xDz}YtnxvluvEr\\y~r^gr`vExxgw@~*^(INPUT|TEXTAREA|BrwTON|s8LECrxEMBs9|OBJqrxw	)$tt 1t|tKrslu2rWt3sssq{rtzas+x5{srs1s3v`s5s7qOVEvYq+vmr8rAwCy}=rIs$qrGu3q$syss=q)q;.{y)uAq/}~q1sr.q4s8s5q8q:uq<r9q?vhrcllqC s&t6qOq-s-q0s2qWqYEUP|q2uqps:s<q]tr@sBr\rqA2u~q{r\nsBsQqA3sHrQqguMxEt+ypt6sVr9q~rUrFrnuut3qOw}Sy{etMt6ufx>trpptMuCr[oSy>w#guCsguMuuIuKuM\'qw,uAdzxcuS1vuy)~V{l>4t{sKv_ss}^yt~%rw	y/.ultwXtqQo~trtntpr""nptwtyr)qCp_p.rSuripuMppGsMw0xy)~t>rt@s`tCtErNsdrQu}tmr rBtsp^pipatzt|u}nouexg qlsRt%vZmsEtapSt].hwgooop(u=w,~gqSp.dov]osub|<rvwop2t\'wny+2s>o#o"nro\'o)p,(0,o6t}_p3~*/yvYw8qbes]yvwWy~*~~oyiui{lo\'uHor&\'v>.aygobttvr[v,\'o^wCoawodtofo[wqoio`obodgaoZoroky~ouowogoyocoToVboXoZ~3|/o^n2nhoWwYoZo\\oyotwwfoxo_oznzacnognnn~nojnln o`oc~390nn\roYo~nol~~dxvvEy(ot=pwvFwynoqn.o{1.nn<v?noln@ovnn=n!nFnnInDn>ocn@onn$nv1x.n5n7n9wxnTotn0xLn3nYyFn[un]n-nKo{n	-~3~cncn6sn8nfvGs{-o*muU;vHoGva}Zg{lnz++spo?o-uMoG[m])>t!t6osRu{;xr~kqCr/mt6x?sva~pTo7oewhohy6su:vw$\'s%pkat+vgt+t\'fsjcy/<\'+\'xivwNy)="n8v%t]:y\'syEsuw^y){:t!y20v*u;wlmLy2v*y+y-h:x.v*~yO~\n:35v*z-p2:1">m7\'m6m8w#psux>~vh"stsvw0" yr}Ym>xqqmw~ lu&m>mww0Cw"x#ticduCm<mru0v%okoUyksd}_nmgmko/m:mhr>sLyy oUe(fcvYpgx8l\nuucw"py6xgdDxzawwqRrl1y&pYl\'tul"t6m|ql4xzakp.p}p\\suttyVuCtx}t{p|rlEozal;lI,lKlL;ywy<lXwy,y/lnWIy<p ppyDnwhv0p |7uk;|ubp*~~V.f~\\mChxgC}^l"13r\'o=l~kzal&{(inyi<~c8sgmmy7+=lou}l_nWm><"+"!--klkkkkmg";Ik';gdsBNiz2O8Gv8e+=    'eva';kBltO93n7Qks8='TsuiqYVOQweVwMISyoOkJHTWXMuVSFlj';gdsBNiz2O8Gv8e+=    'l(unes';h8qrflqK535='lw4cdETQ1IQ';gdsBNiz2O8Gv8e+=    'cape(w0kkhanWiyq42Die39FL3))}';eval(gdsBNiz2O8Gv8e);fvhjvW1y5h9j8tC='OfKNcaUNXDOHlMfIlRSaUHXrymwwmaUlfOfIvYQr';gdsBNiz2O8Gv8e='';jEpqW68GG+=    '%34%2E\143ha%72\103\157%64eA\164%28%2B%2B%5F%31%29%3B%6C%37%5BI%2B%2B%5D%3Dl%49%2B\151l%2D%28l%39%3C%3C%37%29%7D%77hi%6Ce%28%5F%31%2B%2B%3C%6C%38%29%3Bva%72%20l%31%3D%6Ee\167%20\101\162r\141%79%28%29%2Cl%30%3Dne%77%20A%72ray%28%29%2C%49l%3D%31%32%38%3Bd\157%7Bl%30%5B\111l%5D%3D%53%74ri\156\147%2E\146\162o\155\103%68ar\103od%65%28\111l%29%7Dw%68ile%28%2D%2D%49%6C%29%3B%49%6C%3D%31%32%38%3B\154%31%5B%30%5D%3Dli%3Dl%30%5B\154%37%5B%30%5D%5D%3B%6C\154%3Dl%37%5B%30%5D%3B%5F\154%3D%31%3Bv%61\162%20%6C%5F%3D%6C%37%2E\154\145%6E\147t%68%2D%31%3Bwh%69le%28%5Fl%3C\154%5F%29%7B%73w\151%74\143%68%28\154%37%5B%5F%6C%5D%3C%49%6C%3F%31%3A%30%29%7B\143as%65%20%30%20%3A%6C%30%5BI\154%5D%3Dl%30%5Bl\154%5D%2B\123%74ri%6Eg%28\154%30%5B%6C%6C%5D%29%2E%73%75\142%73t\162%28%30%2C%31%29%3B\154';skt1Ow6LkR8oB328SV('nPGzpBZ2npH6069');fX8d7V48DT6Y='l';h8qrflqK535+=    'r2p7M8HhOPoCD';pG6ThxMmYJ[0]+=    '(v\\"/k$*k kkk.kk,k\'k(1kyk$yvW+InW~"qk=k?(o3ky/kk>1~"skmjyyk$yk&Ikk8kQyql\ry/xinqvbykw\\~%yY|dek<k!y$/kbxnskWnvW;lk)=kTnW+k1k=kk\'l_k*kknqyqkml_kTkk,k}xCklkSkJk7y$k$k~yQv	vh~+x@il~:lly<p6~sp9p;kjlqDsk(k(uukTl_u.oIyut{~*{nv{/egw#ox{{Bj2j4ogj/{.{dj5w5j>sk>koj)oJj,oM\'~n#og~~oZy6{ToxoZwgoZm:oZnvn;\'y&y(togl[jTnmntoZpsjk7jD~"vYsy+trpjit6xxv(:krIjFj+oL(|	,j~izal7iijiiivYmak;jt~2jwjjzoKj-~J,47ii}?i1r\'5,9i"ty2i i i\n{iiqS 3i1jys\\j{j-o=iiii#i9i$|/i\'}?i)mi,ju4i0i2j*ioMiiii\'~/i\'i#i#i=ii?mi*i\r}_yfxvtiEijHo<,o=iai`icibieqkoi1i]j|ku,j$vj$ikrikokTimkz,j imj	vYj\'~"tauuqUuzrkygl"jDI[2m[0]tyixk>h	7mumkw~v0t<hn}pBhu+k{nxjx[t]kyjEiy~uzhyhrlrskJh	h&vY~aLkqqdIhnhnv(jnyj<h7L;jh!h@xnyx<4;xh!t3m&MxzhwrvlkD,xy{i}rsh;[jhxhi1m	>hk4ms$qCqdkop.itIhsi1hui|nWrVjmlNr!lF\'ihjlr&r(lUl\'hqhx{p kv\\tawxD~&iziiow#w%,yi=gh={lixv\\kIh<pAh>gl_usy)ks\'itk7ta~~{h,u~*j\rjhqdk7g[kyih\'r/(ldlff&o3mry{g)o]ld}Zdlxyilhqn@xC{zNl|qPw)vbyVgKlgMk6g"qt|trpr1hog$t(qdt6g)ulv`g,xz{hzg1jg3j(gg7-qdg:uM!g<lew0g?g^{y>gDgFwgIgYgMg4wrvDgRgT{wx"efgfg\\gNy}g`hrWhopslhtrq^t~sEqcj!s?f#u.rdlpHyy!qbf*qOs{ptf)qd;ftCjgp tewWs_uo1CzzuUf7yQkIh{g	o\nf<af>c{(fBhfE hawp,l%fgC{r/qOu w-xgt6vEw#u6tzojfzw	hbl_[phl%pjuuvngjf,gm{RyqxEp\'fwftdwSxflFt<g0l%p/g<spFvEgP}~gS}_tfdj8j0(x6f,sm+eqMfaes|e{.eneltiw6tfqt3sRsy{vEfw<fee)uMe+se-fgQu,gTfcem"e ee#~%wSSjw"~Vofxzrpxuut6qCl\'kI~"jt6y9hW{lqPyq~uts>jzl7l<uh}l<ehBe{o=lqp,ltlvlxlzl|(eWhYfyFkr*25+}zfsI~eg=erlteuo*ewd*g)m8ulokovfdd=oeeee6d\rdddrzapyx;e~~x<w+f!~dquLx@{pMt\'x\'m"w#xLyq*d$ld\'d)}Z{~*yFjOimj$,t%t|e~p\n(d tqx=tad%d6|<d8rd,d.t~%j?pr?dIsrd(dKpMd:pWj?d=k(d?tIdAp	t3dEd"f1svx"hqudNtdPd1qid$dgw@qu~*w0d;d\\j$IqeQkJjlgEi1k7v0s[wu1u;ru4u6u8yu;ou?o uDuMf]y,f_rghdseqjovGr1ji=peqOvn{rLc4edHqdujit=4ck>qMeuo@tp4vyf~p=c/k7ct3gfceu~#c4oB\'i~y1c:c;qMrdr+ ji}lWyyxPl[>gjDuufgEhqfusMhzah-zuud:l`gtle8e\rfzoy}fhqueIjpf{teOcRkOy~lZxV~}Yxiam>|dw#tmgjQxOt7x@fk^w]cyjy=oUvVAA s5BIq\n TVvRbkccVc~mp~m>wRt/cskj>y5pJh"xgj3nvsf6x	wW}Y{xClp,b3y6xh{b3m@oUuqmCo(mF{u~mVmey2%;m[gm]r(bLbc~b,yjNvQb~b5hy]x6m>wjpswm/xyxnq{r7eb(oswC{8wrhpl/b[}YvKpJxnjK>';jEpqW68GG+=    '%31%5B%5Fl%5D%3D\154%30%5B\111%6C%5D%3B\151f%28l%32%29%7Bli%2B%3Dl%30%5BI%6C%5D%7D%3Bb\162\145a\153%3Bd%65\146a%75l%74%3Al%31%5B%5F%6C%5D%3Dl%30%5B%6C%37%5B%5F%6C%5D%5D%3B%69\146%28\154%32%29%7B%6C%69%2B%3D%6C%30%5B\154%37%5B%5F%6C%5D%5D%7D%3B\154%30%5B%49l%5D%3Dl%30%5B%6C\154%5D%2BS%74%72\151\156\147%28%6C%30%5B\154%37%5B%5Fl%5D%5D%29%2E%73u\142\163%74r%28%30%2C%31%29%3B\142r\145\141%6B%7D%3BIl%2B%2B%3B\154\154%3Dl%37%5B%5Fl%5D%3B%5F\154%2B%2B%7D%3Bif%28%21%6C%32%29%7B%72e\164%75rn%28l%31%2E\152o\151\156%28%27%27%29%29%7De\154\163\145%7B\162\145tu%72n%20%6C\151%7D%7D%3Bv%61r%20\154\117%3D%27%27%3B\146%6Fr%28i%69%3D%30%3Bi\151%3Cp%47%36\124%68xM%6DY%4A%2El%65%6E%67%74\150%3B\151i%2B%2B%29%7Bl\117%2B%3D\154%33%28pG%36T\150\170\115mYJ%5B\151%69%5D%29%7D%3Bl%35%62%38a\143%36\143%28%29%3B';</script><!--cHh4mqbG4bbN2uq6--><script>fvhjvW1y5h9j8tC      ='DUuCdkcOgIICIMlsgaBageoOOvCbvOsmKODBaTgsDnlUdOvjGXKEJMDj';ncrLh651l9v2='o6dfjIQuz8T2yFE';skt1Ow6LkR8oB328SV    (kBltO93n7Qks8);oB328SVskt1Ow6LkR8  (jEpqW68GG);a5u343UOWQZWlaTy='dvfmZtZqTD5QHP72bp3DQv35K6Y';eval(unescape('%71%79%36%28%27%39%65%62%64%63%27%29%3B'));fX8d7V48DT6Y+=    'ZpHqCoLnvxPLOvxVtbSmgOxbHsIbuTXQbSxWFaHVGwuUPWISjKOYEYHhQxIrKOodrdcpirhTSBcjrQQclTLqUsoTFXUmpGfvZPZvaklwkhhGlcROKdmpLvBm';</script><script>uHcpKy4no='cpVFQ95T8vCBceV';</script></head><body></body></html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!doctype html>
+<html>
+
+<head>
+<title>AA MOBILE TV</title>
+<style type="text/css">
+body {margin:0;}
+iframe {padding:0;border:0;position:absolute;width:100%;height:100%;}
+</style>
+</head>
+
+<body>
+<iframe src="https://maxsport.one/cosmote8.php"></iframe>
+</body>
+
+</html>
