--- a/max/home.html
+++ b/max/home.html
@@ -19,9 +19,11 @@
   <h2 strong><font size="60" color="#FFFFFF" style="background-color: #000000">AA M⚽BILE TV - 24/7 Live Sports & Entertainment Channels</h2>
 </center>
 
-<form action="https://www.aamobiletv.ml/max/home.html/search" method="get">
-  <input type="text" name="query" placeholder="Search..." />
-  <input type="submit" value="Search" />
+<form id="form" role="search">
+  <input type="search" id="query" name="q"
+   placeholder="Search..."
+   aria-label="Search through site content">
+  <button>Search</button>
 </form>
 
 
