--- a/max/4pt.html
+++ b/max/4pt.html
@@ -10,7 +10,7 @@ iframe {padding:0;border:0;position:absolute;width:100%;height:100%;}
 </head>
 
 <body>
-<iframe src="https://max.one/4pt.php"></iframe>
+<iframe src="https://maxsport.one/4pt.php"></iframe>
 </body>
 
 </html>
