--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
     <div id="dialogWrap">
         <div id="dialogWrapCell">
             <div id="mainDialog">
-                <div id="dialogText">Join the Group to get the Password</div>
-				<div style="text-align : center"><a href="https://www.aamobiletv.com.ng/HOME-2" target="_blank"><img alt="thumb" height="80" src="https://i.imgur.com/UYgIaFN.jpg" width="200"></img></a></div>
+                <div id="dialogText">Join the Telegram Channel to get the Password</div>
+				<div style="text-align : center"><a href="http://tinyurl.com/AA-TM-Channel" target="_blank"><img alt="thumb" height="80" src="https://i.imgur.com/UYgIaFN.jpg" width="200"></img></a></div>
                 <div id="passArea">
                     <p id="passwordPrompt">Password</p>
                     <input id="pass" type="password" name="pass" autofocus>
                     <div>
                         <span id="messageWrapper">
-                            <span id="invalidPass" class="error">Sorry, please try again OR Join the Group to get the Password</span>
+                            <span id="invalidPass" class="error">Sorry, please try again OR Join the Telegram Channel to get the Password</span>
                             <span id="trycatcherror" class="error">Sorry, something went wrong.</span>
                             <span id="success" class="notifyText">Success!</span>
                             &nbsp;
@@ -148,7 +148,7 @@
         </div>
     </div>
     <div id="attribution">
-        Protected by <a href="https://www.maxlaumeister.com/pagecrypt/">PageCrypt</a>
+        Protected by <a href="https://www.aamobiletv.com.ng/">AA M⚽BILE TV</a>
     </div>
     <script>
     (function() {
